# Cpp

./: .gitignore  .gitmodules  README.md
src/: AllInclude.h  CMakeLists.txt  TestShared.cpp  build.cmd  cmake_build.cmd  dynamicMain.cpp  firstMain.cpp  main.cpp  secondMain.cpp  v120Main.cpp
src/2016-06-00_0000_SiteStackOverflow/: SOAnswer02.h  SOAnswer03.h
src/2016-10-00 0000 InterviewingQuestions/: WaterInPuddels.hpp  YaUniqueOne.hpp
src/2016-10-00_0000_InterviewingQuestions/: CtorVirtualTest.h
src/2017-01-14 1353 OpenCv first/: AppInclude.h  Funcs.h  Ones.cpp  Ones.h  main.cpp
src/2017-01-14_1353_OpenCv_first/: Funcs.cpp  ResolveHistogramm.cpp  ResolveHistogramm.h
src/2017-03-00_0000_SiteHackerrank/: ConditionalStatements.hpp  VariableSizedArrays.hpp
src/2017-04-28 2051 SiteCodility/: test04.hpp
src/2017-04-30 1137 YandexAlgorithm/: 2017-04-30 1137 YandexAlgoRound2.hpp
src/2017-05-23 0102 StrParser/: StrParser.hpp
src/2017-05-23_0102_UseCmdParser/: UseCmdParser.hpp
src/2017-05-26 0041 ClientServerChat/: ChatClient.hpp  ChatInclude.h  ChatServer.hpp  ChatServerMain.hpp
src/2017-05-26_0041_ClientServerChat/: ChatClientMain.hpp
src/2017-05-28 0209 Subtitle parse/: Dictionary.hpp  EnglishWord.hpp  HelpFunctions.hpp  IniParser.hpp  SubtitleMain.hpp
src/2017-05-29 1330 StdFuncionTest/: _mainStdFunc.hpp
src/2017-05-29_1330_StdFuncionTest/: _mainStdFunc.hpp
src/2017-06-22 0846 UnzipManager/: UnzipApplication.cpp  UnzipApplication.h  UnzipManagerMain.hpp
src/2017-07-03 1604 CodeLiner/: CodeLinerMain.hpp
src/2017-07-03_1604_CodeLiner/: CodeLinerMain.hpp
src/2017-07-08 1414 QHistoryConverter/: QHistoryConverter.hpp
src/2017-07-25 0409 TcpReciever/: TcpRecieverMain.hpp
src/2017-08-14_0100_GTest-CMake/: CMakeLists.txt  cmake_run.cmd
src/2017-08-14_0100_GTest-CMake/main/: CMakeLists.txt
src/2017-08-14_0100_GTest-CMake/my_math_lib/: CMakeLists.txt
src/2017-08-14_0100_GTest-CMake/test/: CMakeLists.txt
src/2017-08-14_0100_GTest-CMake/test/test_my_math/: CMakeLists.txt  main.cpp  test_my_math.cpp
src/2017-08-14_0100_GTest-CMake/tests/: CMakeLists.txt
src/2017-08-17_0912_IsolatedFunctions/: CMakeLists.txt  cmake_run.cmd
src/2017-08-17_0912_IsolatedFunctions/src/: functions.cpp  functions.h  testMain.cpp
src/2017-09-02_1100_condition_varaible/: CMakeLists.txt
src/2017-09-02_1100_condition_varaible/src/: main.cpp
src/2017-09-02_1658_asyns_and_future/: CMakeLists.txt
src/2017-09-02_1658_asyns_and_future/src/: main.cpp
src/2017-09-07_1419_test_pack/: CMakeLists.txt
src/2017-09-07_1419_test_pack/src/: test_pack_main.cpp
src/2017-09-14_1154_cmd_parser_crosscompile/: CMakeLists.txt
src/BookPrata/: Chapter18.h
src/BookPrinciplesAndPractice/: Chapter15.h
src/BookProgrammingLanguage/: Chapter05.h  Chapter06.h  Chapter06_ModifyCalc.h  Chapter06_OriginalCalc.h
src/BookSkiena/: Chapter02.h  Chapter04.h
src/InterviewingQuestions/: YaException.h  YaUniqueOne.hpp
src/My/: AsoDataTest.h  BitSetAdvTest.h  DebugOut.h  DefineLinePointer.h  HelperLibTest.h  MagicNumber.h  MsGetKeyState.h  PredefinedMacros.h  ProgrammLangParser.h  RandomTest.h  RefToPointer.h  STLAlg.h  StaticPrint.h  TemplateParametr.h  ThreadMove.h  ThreadRef.h  WindowsHook.h  WindowsHookOriginal.h
src/MyCppFeatures/: SizeOf.h
src/MyFriendsHelp/: LevaHelp.h
src/MyPlusLibTests/: MemControlTest.h
src/OOP_Socket/: Main.cpp  RoboCatPCH.h  RoboCatShared.h  SocketAddress.cpp  SocketAddress.h  SocketAddress.hpp  SocketAddressFactory.cpp  SocketAddressFactory.h  SocketAddressFactory.hpp  SocketShared.hpp  SocketUtil.cpp  SocketUtil.h  StringUtils.cpp  StringUtils.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  oopSocketMain.hpp
src/OOP_Socket_old/: SocketAddress.cpp  SocketAddress.h  SocketAddressFactory.cpp  SocketAddressFactory.h  SocketUtil.h  StringUtils.cpp  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  oopSocketMain.hpp
src/SiteCodility/: test02.hpp  test03.hpp  test05.hpp  test_demo.hpp
src/SiteHackerrank/: ArraysIntroduction.hpp  ForLoop.hpp  Functions.hpp  Pointer.hpp
src/SiteStackOverflow/: SOAnswer01.h
src/SockLib/: SockLib.cpp  SockLib.h  TcpSocket.h  TcpSocket.hpp  TestClient.hpp  TestServer.hpp  TestSockLib.hpp
src/YandexAlgorithm/: 2017-04-30 1137 YandexAlgoRound2.hpp  2017-05-07 2153 Yandex3_Marathon.hpp  2017-05-14 0958 Yandex_Round01.hpp  YandexAlgo2017.hpp
src/_Books/InsideCOM/: Chapter05.h
src/_Books/Skiena_Algorithm/: Chapter01.h
src/_Books/Straustrup_Practice/: Chapter10.h
src/_obsolete/My/: DataDaceThread.h  StrangeTest.h  TestGeoCoord.h
src/_obsolete/MyCppFeatures/: RegexTest.h  UseLambda.h
src/_obsolete/MyWorkTests/: CmdReaderDll.h
src/_obsolete/OneLogStream/: OneLogStream.h
src/_obsolete/old_shared/: Earth.hpp  HelperLib.h  MyLogger.h  MyLoggerDisable.h  MyLoggerEnable.cpp  MyQtHelper.h  MyQtLogger.cpp  MyQtLoggerDisable.h  MyQtLoggerEnable.h  StdHelper.hpp  StdInclude.h  bitsetadv.h
src/unsorted/: CMakeLists.txt
src/unsorted/src/: chrono_test.cpp
time/2017-04-25_1300_Good-Graph-System/: CMakeLists.txt
time/2017-04-25_1300_Good-Graph-System/src/: AllInclude.h  Application.cpp  Application.h  Sector.h  SimpleTests.hpp  mainGraphSystem.cpp
time/2017-08-17_0912_IsolatedFunctions/: CMakeLists.txt
time/2017-08-17_0912_IsolatedFunctions/src/: functions.h  testMain.cpp
time/2018-01-02_0224_OpenCV_DetectFace/: CMakeLists.txt
time/2018-01-02_0224_OpenCV_DetectFace/src/: main.cpp
time/2019-11-10_0057_TetrisSFML/TetrisSFML/: CMakeLists.txt  TetrisSFML.vcxproj.filters  build_installer.cmd  tetris.rc
time/2019-11-10_0057_TetrisSFML/TetrisSFML/src/: Cell.cpp  Cell.h  Game.cpp  Game.h  Info.cpp  Info.h  Martrix.cpp  Matrix.h  Object.cpp  (+2 more)
time/2019-11-23_0032_ArkanoidSFML/ArkanoidSFML/: ArkanoidSFML.sln  ArkanoidSFML.vcxproj  ArkanoidSFML.vcxproj.filters  CMakeLists.txt  ReadMe.md  build_installer.cmd
time/2019-12-26_1530_CMake/: CMakeLists.txt
time/2019-12-26_1530_CMake/lib_a/: CMakeLists.txt
time/2019-12-26_1530_CMake/lib_b/: CMakeLists.txt
time/2019-12-26_1530_CMake/src/: main.cpp
(+590 files in other folders)
