CMAKE_MINIMUM_REQUIRED(VERSION 3.9.0)

PROJECT(CppTests)

INCLUDE_DIRECTORIES($ENV{STD_PLUS_DIR}/include)

ADD_SUBDIRECTORY(2017-09-02_1100_condition_varaible)
ADD_SUBDIRECTORY(2017-09-02_1658_asyns_and_future)
ADD_SUBDIRECTORY(2017-09-07_1419_test_pack)
ADD_SUBDIRECTORY(2017-09-14_1154_cmd_parser_crosscompile)